# mic-hackathon

./: .gitignore  Dataloader.ipynb  LICENSE  README.md  basic_import
4denoiser/dataloader/: dataloader.py
documents/notes/: Libraries_versions_Machine1
experiment/codes/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  basic_import  pyproject.toml
experiment/codes/core/: data.py
experiment/codes/playground/: Dataloader.ipynb  jordi_new_dataloader.ipynb  my_version.ipynb  visualize_data.ipynb
experiment/codes/scripts/: config.yml  eval.py  results visualisation.ipynb  train.py
experiment/codes/scripts/core/: dataloader.py
experiment/codes/scripts/core/models/: udvd.py
experiment/codes/utils/: logger.py  opts.py  scplot.py
resources/reference_work/: papers.md
